--- a/package.json
+++ b/package.json
@@ -5,55 +5,56 @@
   "main": "index.js",
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
-    "@kintone/rest-api-client": "^1.4.0",
+    "@kintone/rest-api-client": "^1.4.2",
     "jquery": "^3.5.1",
-    "moment": "^2.26.0",
-    "superagent": "^5.2.2",
+    "moment": "^2.27.0",
+    "superagent": "^5.3.1",
     "sweetalert": "^2.1.2",
     "datepicker": "0.0.0",
-    "handsontable": "^6",
+    "handsontable": "^7",
     "jquery-timepicker": "^1.3.3",
     "pikaday": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-env": "^7.10.3",
     "@babel/preset-typescript": "^7.10.1",
-    "@cybozu/eslint-config": "^10.0.4",
-    "@kintone/customize-uploader": "^3.0.5",
-    "@kintone/dts-gen": "^3.0.4",
-    "@kintone/plugin-manifest-validator": "^3.0.4",
-    "@kintone/plugin-packer": "^3.0.4",
-    "@kintone/plugin-uploader": "^4.0.4",
+    "@cybozu/eslint-config": "^11.0.0",
+    "@kintone/customize-uploader": "^3.0.6",
+    "@kintone/dts-gen": "^3.0.5",
+    "@kintone/plugin-manifest-validator": "^3.0.5",
+    "@kintone/plugin-packer": "^3.0.5",
+    "@kintone/plugin-uploader": "^4.1.0",
     "@types/classnames": "^2.2.10",
     "@types/gapi": "0.0.39",
-    "@types/jquery": "^3.3.38",
+    "@types/jquery": "^3.5.0",
     "@types/jquery.timepicker": "^0.3.29",
     "@types/moment": "^2.13.0",
     "@types/sweetalert": "^2.0.4",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "fork-ts-checker-webpack-plugin": "^4.1.6",
+    "fork-ts-checker-webpack-plugin": "^5.0.5",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "npm-check-updates": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -68,7 +69,6 @@
     "lambaDeploy": "cd $WORKING && zip -r ${FUNC_NAME}.zip ./ -x \"*.zip\" \"node_modules\" \".*\" && aws lambda update-function-code --function-name ${FUNC_NAME} --zip-file fileb://${FUNC_NAME}.zip && rm ${FUNC_NAME}.zip",
     "upload": "cd $WORKING && npx @kintone/customize-uploader src/customize-manifest.json --dest-dir src",
     "layerZip": "cd $WORKING && zip -r $(basename `pwd`).zip nodejs "
-
   },
   "repository": {
     "type": "git",
